# found_focus_api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
found_focus_api/: app.py
found_focus_api/database/: init.py
found_focus_api/routes/: users.py
found_focus_api/schemas/: user_schemas.py
found_focus_api/services/users/: create_user.py  find_user_by_unique.py  read_users.py  user_already_exists.py
migrations/: env.py
migrations/versions/: f7aa3c121d6e_create_users_table.py
src/: app.py
src/database/: init.py
src/models/: main.py
src/routes/: users.py
src/schemas/: user_schemas.py
src/services/users/: create_user.py  find_user_by_unique.py  read_users.py  user_already_exists.py
tests/: test_found_focus_api.py
