[tool.poetry]
name = "found_focus_api"
version = "0.1.0"
description = ""
authors = ["Lucas <rodriggeslucas@gmail.com>"]

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn found_focus_api.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.6.0"}
SQLAlchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
taskipy = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.1.15"
httpx = "^0.26.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
